data/derived/comb/progs/unify/prog6353.ml.out
Characters 92-96:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type ('a -> 'a) -> 'a -> 'a
       but an expression was expected of type ('a -> 'a) -> 'a
       The type variable 'a occurs inside 'a -> 'a
